# fusionx-eth-cos

./: .gitignore  ReadMe.md
contracts/: .gitignore  EthereumHTLC.sol  FusionOrderSettler.sol  foundry.toml  package.json
contracts/htlc/: Cargo.toml  NOTICE  README.md  build_wasm.sh
contracts/htlc/src/: contract.rs  error.rs  lib.rs  msg.rs  optimized_contract.rs  state.rs
contracts/htlc/tests/: create_escrow.rs  execute_claim.rs  execute_escrow.rs  execute_refund.rs  query_escrow
contracts/test/: EthereumHTLC.t.sol
frontend/: README.md  SETUP.md  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/my-orders/: page.tsx
frontend/app/settled/[auctionId]/: page.tsx
frontend/app/settled/[autionId]/: page.tsx
frontend/app/swap/: page.tsx
frontend/app/swap/[auctionId]/: page.tsx
frontend/app/swap/[autionId]/: page.tsx
frontend/app/swap/atomic/: page.tsx
frontend/components/: AuctionPreview.tsx  ConfirmationModal.tsx  Header.tsx  StatsCard.tsx  SwapInput.tsx  SwapSettings.tsx
frontend/lib/: config.ts  contracts.ts  cosmos.ts  swap-flow.ts
frontend/lib/hooks/: useContracts.ts
fusionx-eth-cos/: LICENSE  ReadMe.md
