[package]
name = "htlc"
version = "0.1.0"
authors = ["UGOD <rebeccallenn9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.2.0"
cw-utils = "1.0.1"
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
  # Or this if you only deploy to chains that have CosmWasm 2.1 or higher
  # "cosmwasm_2_1",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
sha3 = "0.10"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.20"
hex-literal = "1.0.0"
bech32 = "0.9"
rand = "0.8"
